# WrinkleArea3D

./: README.md  pyproject.toml
3D/: main.py
api/: main.py  visualize_area.py
depth/: depth_area.py  preprocess.py
segmentation/inference/: inference.py  utils.py
segmentation/train/: dataset.py  model.py  preprocess.py  train.py
segmentation/train/data/wrinkle_preprocess/: refrigerator_00046_.json  refrigerator_00047_.json  refrigerator_00049_.json  refrigerator_00050_.json  스크린샷 2024-10-31 오전 10.13.02.json  스크린샷 2024-10-31 오전 10.13.20.json  스크린샷 2024-10-31 오전 10.13.42.json  스크린샷 2024-10-31 오전 10.14.07.json  스크린샷 2024-10-31 오전 10.14.45.json  스크린샷 2024-10-31 오전 10.15.07.json  스크린샷 2024-10-31 오전 10.15.40.json  스크린샷 2024-10-31 오전 10.16.22.json  스크린샷 2024-10-31 오전 10.16.55.json  스크린샷 2024-10-31 오전 10.24.35.json  스크린샷 2024-10-31 오전 10.25.04.json  스크린샷 2024-10-31 오전 10.25.23.json  스크린샷 2024-10-31 오전 10.26.05.json
