[tool.poetry]
name = "WrinkleArea3D"
version = "0.1.0"
description = ""
authors = ["tae-uk403 <ntw0403@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
open3d = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
