[tool.poetry]
name = "WrinkleArea3D"
version = "0.1.0"
description = ""
authors = ["tae-uk403 <ntw0403@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.0"
open3d = "^0.18.0"
pytz = "^2024.2"
tqdm = "^4.67.1"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
